# fno-backtest-platform

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/nfo/: .registry.json
data/nfo/: instruments_nfo_options.parquet  regime_history.parquet
data/option_bars/: O_GOOG260417P00285000.parquet  O_GOOG260417P00290000.parquet  O_IWM240621P00190000.parquet  O_IWM240621P00192000.parquet  O_IWM240621P00193000.parquet  O_IWM240621P00195000.parquet  O_IWM240621P00197000.parquet  O_IWM240621P00198000.parquet  O_IWM240621P00199000.parquet  O_IWM240621P00200000.parquet  O_IWM240621P00201000.parquet  O_IWM240621P00202000.parquet  O_IWM240621P00203000.parquet  O_IWM240719P00181000.parquet  O_IWM240719P00183000.parquet  O_IWM240719P00184000.parquet  O_IWM240719P00186000.parquet  O_IWM240719P00188000.parquet  O_IWM240719P00189000.parquet  O_IWM240719P00190000.parquet  O_IWM240719P00191000.parquet  O_IWM240719P00192000.parquet  O_IWM240719P00193000.parquet  O_IWM240719P00194000.parquet  O_IWM240816P00194000.parquet  O_IWM240816P00196000.parquet  O_IWM240816P00198000.parquet  O_IWM240816P00199000.parquet  O_IWM240816P00201000.parquet  O_IWM240816P00203000.parquet  O_IWM240816P00204000.parquet  O_IWM240816P00205000.parquet  O_IWM240816P00206000.parquet  O_IWM240816P00208000.parquet  O_IWM240920P00191000.parquet  (+273 more)
docs/: REVIEW.md  india-fno-nuances.md  options-reading-material.md  v3-spec-frozen.md
legacy/: README.md
legacy/csp/: cache.py  (+1 more)
results/: plan.md  plan_v2.md  spread_summary.csv  spread_trades.csv  summary.csv  trades.csv
scripts/: build_plan_v2.py  focused_run.py  run_grid.py  spread_run.py  xlv_run.py
(+274 files in other folders)
