[project]
name = "csp"
version = "0.1.0"
description = "Cash-secured put backtester on Massive.com options data"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pandas>=2.2",
  "pyarrow>=16",
  "numpy>=1.26",
  "python-dotenv>=1.0",
  "scipy>=1.13",
  "tenacity>=9.0",
  "rich>=13",
  "tabulate>=0.9",
  "pydantic>=2.5",
  "parallel-web>=0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = ""
testpaths = ["tests"]
