[project]
name = "nfo-platform"
version = "0.1.0"
description = "NFO (NIFTY/BANKNIFTY F&O) research platform — spec-driven strategy backtests, robustness studies, and live regime monitoring for Indian credit-spread trading."
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pandas>=2.2",
  "pyarrow>=16",
  "numpy>=1.26",
  "python-dotenv>=1.0",
  "scipy>=1.13",
  "tenacity>=9.0",
  "rich>=13",
  "tabulate>=0.9",
  "pydantic>=2.5",
  "parallel-web>=0.1",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["nfo*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = ""
testpaths = ["tests"]
